# Petty

./: .coverage  .dockerignore  .env.example  .env.testing  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  QUALITY_GATEKEEPER_DEMO.md  README.md  SECURITY.md  TIMESTREAM_IMPLEMENTATION.md  branch_sync_report.json  coverage.json  coverage.xml  demo_canary_mitigation.py  demo_issue_creation.sh  demo_security_failure.sh  demo_timestream_feature.py  docker-compose.yml  fix_pydantic.py  healthcheck.py  pet_dashboard_screen.dart  production_validation_results.json  pyproject.toml  requirements.txt  samconfig.toml  test_integration.py  test_redteam_workflow.sh  validate_final.py  validate_production.py
.codacy/: cli.sh
.github/: dependabot.yml
.github/workflows/: branch-sync-monitor.yml  build-sign.yml  ci.yml  cloudrun.yml  codeql.yml  coverage.yml  deploy.yml  dev-tasks.yml  redteam.yml  sbom.yml  scorecard.yml
.hypothesis/constants/: 006b559781a41f7f  0128cd20f00501ae  012f57b81bb21f70  022671e2e5d7b198  03831d0578c8f474  038df362e197733e  03ab1e6e6bb21915  0407065d5625e763  0489c02d467aa48f  05f816c6fe71683e  067b7cfeea41ca31  0783b69cd846ee73  09c4cce0f373044f  09fc23090f4ca7b1  0a0ffe2e9fda6ac1  0a174ab092bdf149  0a271b1f7519ead8  0adb35c696bc0f90  0af89877e7653ce1  0aff081405263263  0b870b04b5a54e01  0bedcb7a7842b142  0cfa12dfbf9e9abb  0e37161ce661e483  0eb3b6d054b7319b  0ed3239c2b22b8c9  0f6eb81a968747f2  0f8cba9e2bb636c8  0fc9a11759b0e8dc  1058a221037afb70  10bdf10c323c85ee  11e12b17120b2c95  11eac5b787c33b1d  1441632399b8e6cf  1453a87ccff7f5ec  14d720bc74255ab1  14fdab6586761512  151d3a2c1725a217  157af0d0548f2f4c  167f5a158e5e77e6  (+372 more)
docs/: ADAPTIVE_POLLING_ENHANCEMENT.md  BRANCH_SYNC_GUIDE.md  CONSUMER_OVERVIEW.md  DATA_PROTOCOL.md  INGESTION_ARCHITECTURE.md  MOBILE_UI_ADAPTIVE_POLLING.md  MODEL_CARD_behavioral_interpreter.md  OBSERVABILITY.md  OPERATIONS.md  PERFORMANCE_ACCESSIBILITY_GUIDELINES.md  PRIVACY.md  PRODUCTION_IMPLEMENTATION_OVERVIEW.md  PRODUCTION_READINESS_PLAN.md  README.md  REAL_TIME_ALERTS.md  SECURITY.md
docs/api/: README.md  openapi.yaml
docs/architecture/: system-overview.md
docs/deployment/: README.md
docs/guides/: installation.md  quick-start.md
docs/metrics/: coverage.json
docs/samples/: active_day_sample.jsonl
docs/troubleshooting/: README.md  faq.md
examples/: ai_security_demo.py
infrastructure/: template.yaml
mobile_app/: DASHBOARD_README.md  PERFORMANCE_GUIDE.md  README.md  analysis_options.yaml  analyze_improvements.sh  pubspec.yaml
mobile_app/lib/: components.dart  design_system.dart  main.dart  petty.dart
mobile_app/lib/src/: app.dart  components.dart  design_system.dart
mobile_app/test/: README.md  accessibility_test.dart  app_integration_test.dart  dashboard_adaptive_polling_test.dart  dashboard_stream_test.dart  feedback_idempotency_test.dart  flutter_test_config.dart  glass_container_test.dart  glass_container_validation_test.dart  help_screen_test.dart  integration_test.dart  performance_test.dart  pet_dashboard_screen_test.dart  pet_dashboard_test.dart  theme_accessibility_test.dart
mobile_app/test/accessibility/: dashboard_accessibility_test.dart
mobile_app/test/golden/: glass_panel_test.dart
mobile_app/test/goldens/: dashboard_story_golden_test.dart  (+2 more)
monitoring/: prometheus.yml
src/: ai_core_service.py  api_service.py  github_pr_creator_app.py  knowledge_base.py  nutrition_calculator.py  recommendation_model.py  threshold_optimizer_app.py
src/alarm_mitigator/: app.py
src/behavioral_interpreter/: config.py  interpreter.py
src/data_processor/: app.py
src/dsar_delete/: app.py
src/dsar_export/: app.py
src/dsar_processor/: app.py
src/feedback_handler/: app.py
src/github_issue_creator/: app.py
src/timeline_generator/: app.py
test_venv/: pyvenv.cfg
tests/: run_tests.py  test_api_service.py  test_dsar.py  test_export_telemetry.py  test_feedback_s3.py  test_generate_samples.py  test_powertools_import.py  test_s3_security.py  test_threshold_optimizer.py  test_timeline_integration.py  test_timestream_query.py  test_timestream_standalone.py  test_tools.py  validate_production_readiness.py  validate_system.py
tests/behavioral_interpreter/: test_config.py
tests/common/: test_s3_put_json.py
tests/e2e/: conftest.py  test_error_scenarios.py  test_full_workflow.py  test_performance.py
tests/integration/: test_canary_mitigation.py  test_integration.py  test_timeline_flow.py
tests/performance/: test_performance.py
tests/security/: test_ai_guardrails.py  test_ai_security.py  test_atlas_cases.py  test_handlers_integration.py  test_llm_top10.py  test_models.py  test_owasp_llm_mitigations.py  test_production_auth.py  test_safe_mode_rate_limiter.py
tests/unit/: test_interpreter_thresholds.py
tools/: README.md  branch_sync_check.py  branch_sync_summary.py  bulk_branch_sync.py  collar_simulator.py  export_telemetry.py  generate_samples.py  generate_telemetry_samples.py  optimize_thresholds.py
(+62 files in other folders)
